# cache-lite

./: Cargo.toml  ChangeLog.md  LICENSE  Readme.md
examples/: quick_start.rs  run.rs  test.rs
src/: cache.rs  config.rs  error.rs  lib.rs  object.rs  utils.rs
