[package]
name = "cache-lite"
version = "0.2.1"
edition = "2024"
description = "A cross-platform caching library for Rust with configurable storage, lifecycle, and file formatting"
authors = ["TaimWay <taimway@gmail.com>"]
license = "MIT"
repository = "https://github.com/TaimWay/cache-lite"
documentation = "https://docs.rs/cache-lite"
keywords = ["cache", "caching", "storage", "file-cache"]
categories = ["caching", "filesystem"]
readme = "Readme.md"

[dependencies]
chrono = "0.4.43"
dirs = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.3"

